<resources>
    <string name="app_name">Drzewostan</string>
    <string name="resetuj">Resetuj</string>
    <string name="zapisz">Zapisz</string>
    <string name="wyslij">Wyślij</string>
    <string name="Zapisane">Zapisane</string>
    <string name="rednica">Średnica</string>
    <string name="liczba_drzew">Liczba drzew</string>
    <string name="wysoko">Wysokość</string>
    <string name="todo">TODO</string>
    <string name="_1_100">1-100</string>
    <string name="__">-</string>

    <string name="____">+</string>
    <string name="forest">Forest</string>
    <string name="b">SPEC. B</string>
    <string name="plus">+</string>

    <string name="_1_wa">1 - WA</string>


    <string name="a">SPEC. A</string>


    <string name="_3_wc_wd_s2_s3_s4">3 - WC,WD,S2,S3,S4</string>
    <string name="_2_wb_s1">2 - WB,S1</string>
    <string name="minus">-</string>
    <string name="_0">0</string>
    <string name="c_s">SPEC. C/S</string>
    <string name="aktualna_wersja_">Aktualna wersja 1.5</string>
    <string name="copyright_pawe_krzy_ciak">Copyright Paweł Krzyściak</string>
    <string name="powi_ksz_obszar_roboczy">Powiększ obszar roboczy</string>
    <string name="wprowadz_odzia">Wprowadź Oddział</string>
    <string name="wprowadz_odziax">Wprowadź oddział</string>
    <string name="name_of_user">Imię i nazawisko</string>
    <string name="Notatka_służbowa">Notatka służbowa</string>
    <string name="autoryzacja">Aplikacja niezweryfikowana \n - Wersja z reklamami</string>

    <string-array name="numbers">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">save</string>
    <string name="settings">Ustawienia</string>
    <string name="pine">Sosna</string>
    <string name="oak">Dąb Szypułkowy</string>
    <string name="oak_sh">Dąb Sz.</string>
    <string name="alder">Olszyna</string>
    <string name="birch">Brzoza</string>
    <string name="red_oak">Dąb Czerwony</string>
    <string name="red_oak_sh">Dąb Czer.</string>
    <string name="birdcherry">Czeremch</string>
    <string name="beech">Buk</string>
    <string name="hornbeam">Grab</string>
    <string name="fir">Jodła</string>
    <string name="larch">Modrzew</string>
    <string name="spruce">Świerk</string>
</resources>
