<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checked="false"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/powi_ksz_obszar_roboczy"
            android:textAlignment="center"
            android:textSize="20sp"
            android:theme="@style/Base.Widget.AppCompat.CompoundButton.CheckBox" />

    </LinearLayout>

    <View
        android:id="@+id/breaks"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:text="@string/aktualna_wersja_"
        android:textAlignment="center"

        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:text="@string/copyright_pawe_krzy_ciak"
        android:textAlignment="center"

        android:textSize="15sp" />


</LinearLayout>