<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:id="@+id/tytul"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="3"
        android:background="@color/Colorte"
        >
        <TextView
            android:textAlignment="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
            android:text="@string/rednica"/>
        <TextView
            android:textAlignment="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
            android:text="@string/liczba_drzew"/>
        <TextView
            android:textAlignment="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
            android:text="@string/wysoko"/>
    </LinearLayout>
    <View
        android:layout_below="@id/tytul"
        android:id="@+id/breaks"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary" />
    <RelativeLayout
        android:layout_below="@id/breaks"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>

    </RelativeLayout>


</RelativeLayout>