<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100"
    android:gravity="center"
    android:padding="5dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/zakres"
        android:layout_weight="20"
        android:text="@string/_1_100"
        android:textAlignment="center"
        android:layout_margin="5dp"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="30dp"
        />

    <Button
        android:layout_weight="10"
        android:minWidth="40dp"
        android:textSize="30sp"
        android:text="@string/__"
        android:id="@+id/button_minus"
        android:textColor="@color/Appbar"
        android:background="@drawable/shape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/ilosc"
        android:layout_weight="40"
        android:textSize="20sp"
        android:maxWidth="30dp"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"/>
     <Button

         android:minWidth="40dp"
         android:layout_weight="10"
        android:textSize="30sp"
        android:id="@+id/button_plus"
        android:text="@string/____"
         android:textColor="@color/Appbar"
         android:background="@drawable/shape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/Spinner"
        style="@style/Base.Widget.AppCompat.Spinner"
        android:layout_width="wrap_content"
        android:layout_weight="20"
        android:padding="0dp"
        android:textAlignment="center"
        android:layout_height="wrap_content">

    </Spinner>
    <!--<EditText-->
        <!--android:id="@+id/editid"-->

        <!--style="@style/Base.Widget.MaterialComponents.TextInputEditText"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->

        <!--android:layout_marginEnd="10dp"-->
        <!--android:layout_weight="20"-->
        <!--android:hint="0"-->
        <!--android:textAlignment="center"-->
        <!--android:inputType="number"-->
        <!--android:maxWidth="20dp"-->

        <!--android:textSize="20sp" />-->

</LinearLayout>