<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.anioncode.drzewostan.R" />

        <variable
            name="viewModel"
            type="com.anioncode.drzewostan.features.presentation.modules.forestStand.view_models.TreesPagerViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Colorte"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                style="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rednica"
                android:textAlignment="center" />

            <TextView
                style="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/liczba_drzew"
                android:textAlignment="center" />

            <TextView
                style="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wysoko"
                android:textAlignment="center" />
        </LinearLayout>

        <View
            android:id="@+id/breaks"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/tvTitle"
            android:background="@color/colorPrimary" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/breaks">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dataTreesList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_tree">

            </androidx.recyclerview.widget.RecyclerView>

        </RelativeLayout>


    </RelativeLayout>
</layout>