<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:weightSum="100"
    android:gravity="center"
    android:orientation="horizontal"
    >


    <TextView
        android:id="@+id/klasaWA"
        android:layout_weight="30"
        android:text="@string/_1_wa"
        android:textAlignment="center"
        android:layout_margin="5dp"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="30dp"
        />

    <Button
        android:textColor="@color/Appbar"
        android:background="@drawable/shape"
        android:layout_weight="10"
        android:minWidth="40dp"
        android:textSize="30sp"
        android:text="@string/minus"
        android:id="@+id/button_minusWA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/iloscWA"
        android:layout_weight="50"
        android:textSize="20sp"
        android:maxWidth="30dp"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"/>
    <Button
        android:textColor="@color/Appbar"
        android:background="@drawable/shape"
        android:minWidth="40dp"
        android:layout_weight="10"
        android:textSize="30sp"
        android:id="@+id/button_plusWA"
        android:text="@string/plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:weightSum="100"
        android:gravity="center"
        android:orientation="horizontal"
        >


        <TextView
            android:id="@+id/klasaWB"
            android:layout_weight="30"
            android:scrollHorizontally="false"
            android:text="@string/_2_wb_s1"
            android:textAlignment="center"
            android:layout_margin="5dp"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="30dp"
            />

        <Button
            android:textColor="@color/Appbar"
            android:background="@drawable/shape"
            android:layout_weight="10"
            android:minWidth="40dp"
            android:textSize="30sp"
            android:text="@string/minus"
            android:id="@+id/button_minusWB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/iloscWB"
            android:layout_weight="50"
            android:textSize="20sp"
            android:maxWidth="30dp"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"/>
        <Button
            android:textColor="@color/Appbar"
            android:background="@drawable/shape"
            android:minWidth="40dp"
            android:layout_weight="10"
            android:textSize="30sp"
            android:id="@+id/button_plus_WB"
            android:text="@string/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:weightSum="100"
        android:gravity="center"
        android:orientation="horizontal"
        >


        <TextView
            android:id="@+id/klasaWC"
            android:layout_weight="30"
            android:text="@string/_3_wc_wd_s2_s3_s4"

            android:scrollHorizontally="false"

            android:textAlignment="center"
            android:layout_margin="5dp"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="30dp"
            />

        <Button
            android:textColor="@color/Appbar"
            android:background="@drawable/shape"
            android:layout_weight="10"
            android:minWidth="40dp"
            android:textSize="30sp"
            android:text="@string/minus"
            android:id="@+id/button_minusWC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/iloscWC"
            android:layout_weight="50"
            android:textSize="20sp"
            android:maxWidth="30dp"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"/>
        <Button
            android:textColor="@color/Appbar"
            android:background="@drawable/shape"
            android:minWidth="40dp"
            android:layout_weight="10"
            android:textSize="30sp"
            android:id="@+id/button_plus_WC"
            android:text="@string/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:weightSum="100"
        android:gravity="center"
        android:orientation="horizontal"
        >


        <TextView
            android:id="@+id/klasaA"
            android:layout_weight="30"
            android:text="@string/a"
            android:textAlignment="center"
            android:layout_margin="5dp"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="30dp"
            />

        <Button
            android:textColor="@color/Appbar"
            android:background="@drawable/shape"
            android:layout_weight="10"
            android:minWidth="40dp"
            android:textSize="30sp"
            android:text="@string/minus"
            android:id="@+id/button_minusA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/iloscA"
            android:layout_weight="50"
            android:textSize="20sp"
            android:maxWidth="30dp"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"/>
        <Button
            android:textColor="@color/Appbar"
            android:background="@drawable/shape"
            android:minWidth="40dp"
            android:layout_weight="10"
            android:textSize="30sp"
            android:id="@+id/button_plus_A"
            android:text="@string/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:weightSum="100"
        android:gravity="center"
        android:orientation="horizontal"
        >


        <TextView
            android:id="@+id/klasaB"
            android:layout_weight="30"
            android:text="@string/b"
            android:textAlignment="center"
            android:layout_margin="5dp"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="30dp"
            />

        <Button
            android:textColor="@color/Appbar"
            android:background="@drawable/shape"
            android:layout_weight="10"
            android:minWidth="40dp"
            android:textSize="30sp"
            android:text="@string/minus"
            android:id="@+id/button_minusB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/iloscB"
            android:layout_weight="50"
            android:textSize="20sp"
            android:maxWidth="30dp"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"/>
        <Button
            android:textColor="@color/Appbar"
            android:background="@drawable/shape"
            android:minWidth="40dp"
            android:layout_weight="10"
            android:textSize="30sp"
            android:id="@+id/button_plus_B"
            android:text="@string/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:weightSum="100"
        android:gravity="center"
        android:orientation="horizontal"
        >


        <TextView
            android:id="@+id/klasaC_S"
            android:layout_weight="30"
            android:text="@string/c_s"
            android:textAlignment="center"
            android:layout_margin="5dp"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="30dp"
            />

        <Button
            android:textColor="@color/Appbar"
            android:background="@drawable/shape"
            android:layout_weight="10"
            android:minWidth="40dp"
            android:textSize="30sp"
            android:text="@string/minus"
            android:id="@+id/button_minusC_S"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/iloscC_S"
            android:layout_weight="50"
            android:textSize="20sp"
            android:maxWidth="30dp"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"/>
        <Button
            android:textColor="@color/Appbar"
            android:background="@drawable/shape"
            android:minWidth="40dp"
            android:layout_weight="10"
            android:textSize="30sp"
            android:id="@+id/button_plus_C_S"
            android:text="@string/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <!--<EditText-->
    <!--android:id="@+id/editid"-->

    <!--style="@style/Base.Widget.MaterialComponents.TextInputEditText"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->

    <!--android:layout_marginEnd="10dp"-->
    <!--android:layout_weight="20"-->
    <!--android:hint="0"-->
    <!--android:textAlignment="center"-->
    <!--android:inputType="number"-->
    <!--android:maxWidth="20dp"-->

    <!--android:textSize="20sp" />-->

</LinearLayout>